fix: alignment on price fields

--- a/src/sass/components/atoms/_text-input.scss
+++ b/src/sass/components/atoms/_text-input.scss
@@ -14,6 +14,7 @@
     &--number {
         display: grid;
         grid-template-columns: max-content 1fr;
+        align-items: center;
     };
 
     &__hidden-input {
